--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
   margin: 70px 0px 0px;
 }
 
-nav {
+header {
   background-color: #fff;
   border-bottom: 1px solid #999;
   box-sizing: border-box;
@@ -26,7 +26,7 @@ nav {
   z-index: 1;
 }
 
-nav img {
+header img {
   height: 22px;
 }
 
@@ -37,9 +37,48 @@ h1, h2, h3, h4 {
 }
 
 h1 {
-  font-size: 36px;
+  font-size: 1.71em;
   margin: auto;
   max-width: 700px
+}
+
+blockquote{
+	margin: 0 15%;
+  padding: 0 2% .5em;
+  line-height: 1.4em;
+  font-size: 1.2em;
+  font-style:italic;
+}
+
+blockquote::before, blockquote::after{
+	font-size: 2em;
+	color:rgba(0,0,0,0.25);
+  line-height: 0.1em;
+  font-style:normal;
+}
+
+blockquote::before{
+	content: "\00AB\00A0";
+}
+
+blockquote::after{
+	content: "\00A0\00BB";
+}
+
+hr{
+	width:50%;
+	color:rgba(0,0,0,0.25);
+}
+
+.container a{
+	color:#ff6f00;
+	text-decoration: none;
+}
+
+.container a:hover{
+	color: #ffffff;
+	background-color: #ff6f00;
+	transition: .4s ease;
 }
 
 .container {
@@ -50,6 +89,38 @@ h1 {
 .container p {
   line-height: 30px;
   margin: 1em 10%;
+}
+
+nav a{
+	display:block;
+	width:600px; 
+	margin: auto;
+	color: #ffffff;
+}
+
+nav figure{
+	position:relative;
+	margin: 1em 0;
+}
+
+nav img{
+	margin: 0;
+	height: 300px;
+}
+
+nav figcaption{
+	position:absolute;
+	bottom:6;
+	left:0;
+	right:0;
+	background-color: rgba(0,0,0,0.5);
+	padding: .5em;
+	text-align: center;
+}
+
+nav h2{
+	font-size : 1.25em;
+	font-weight: 300;
 }
 
 /***** DRY CLASSES *****/
