--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,19 @@ h1 {
   margin: 1em 10%;
 }
 
+.chart {
+  margin-left: auto;
+  margin-right: auto;
+  width: 800px;
+}
+
+.chart_title {
+  font-style: italic;
+  font-weight: bold;
+  text-align: center;
+  padding: 0px 100px;
+}
+
 /***** DRY CLASSES *****/
 
 .center {
