--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ h1, h2, h3, h4 {
 
 h1 {
   font-size: 1.71em;
-  margin: auto;
+  margin: 2.5em auto 1em;
   max-width: 700px
 }
 
@@ -68,14 +68,15 @@ blockquote::after{
 hr{
 	width:50%;
 	color:rgba(0,0,0,0.25);
+	margin: 2em auto;
 }
 
-.container a{
+.container a {
 	color:#ff6f00;
 	text-decoration: none;
 }
 
-.container a:hover{
+.container a:hover {
 	color: #ffffff;
 	background-color: #ff6f00;
 	transition: .4s ease;
@@ -91,26 +92,82 @@ hr{
   margin: 1em 10%;
 }
 
-nav a{
+/* ==== Navigation ==== */
+
+/* == Générale == */
+
+nav:not(.home) {
+	width:800px;
+	margin:5em auto;
+	position: relative;
+}
+
+
+nav:not(.home) a:first-child, nav a:last-child {
+	display: inline-block;
+	position: absolute;
+	bottom: .1em;
+	margin-bottom: 1em;
+}
+
+nav:not(.home) a:first-child{
+	left:0;
+}
+
+nav:not(.home) a:first-child::before{
+	content: "\00A0\00AB\00A0";
+}
+
+nav:not(.home) a:first-child::after{
+	content: "\00A0\00A0";
+}
+
+nav:not(.home) a:last-child{
+	right: 0;
+}
+
+nav:not(.home) a:last-child::before{
+	content: "\00A0\00A0";
+}
+
+nav:not(.home) a:last-child::after{
+	content: "\00A0\00BB\00A0";
+}
+
+.container a, nav:not(.home) a {
+  font-family: Lato, sans-serif;
+	color:#FF8F00;
+	text-decoration: none;
+}
+
+.container a:hover, nav:not(.home) a:hover {
+	color: #ffffff;
+	background-color: #FF8F00;
+	transition: .4s ease;
+}
+
+/* == Home == */
+
+nav.home a{
 	display:block;
 	width:600px; 
 	margin: auto;
 	color: #ffffff;
 }
 
-nav figure{
+nav.home figure{
 	position:relative;
 	margin: 1em 0;
 }
 
-nav img {
+nav.home img {
 	margin: 0;
 	height: 300px;
 }
 
-nav figcaption {
+nav.home figcaption {
 	position: absolute;
-	bottom: 6;
+	bottom: 6px; /*je ne sais pas pourquoi 6px mais ça marche…*/
 	left: 0;
 	right: 0;
 	background-color: rgba(0,0,0,0.5);
@@ -118,15 +175,19 @@ nav figcaption {
 	text-align: center;
 }
 
-nav h2{
+nav.home h2{
 	font-size: 1.25em;
 	font-weight: 300;
 }
 
 .chart {
-  margin-left: auto;
-  margin-right: auto;
+  margin: 2em auto 0;
   width: 800px;
+}
+
+#chart_div2{
+  width: 100%;
+  height: 100%;
 }
 
 .chart_title {
