--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,7 @@ nav.home img {
 
 nav.home figcaption {
 	position: absolute;
-	bottom: 6px; /*je ne sais pas pourquoi 6px mais ça marche…*/
+	bottom: 6px; 
 	left: 0;
 	right: 0;
 	background-color: rgba(0,0,0,0.5);
